# Gender-Classify-LLM

./: .gitignore  README.md  pyproject.toml
src/gender_classify_llm/: __init__.py  classify.py  modelfile  ollama.py
