[project]
name = "gender-classify-llm"
version = "0.1.1"
description = "A lightweight Python wrapper library that predicts the gender of a person in an image using local Ollama Vision-Language models."
readme = "README.md"
authors = [
    { name = "SeshuTarapatla", email = "seshu.tarapatla@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.6.1",
    "rich>=14.2.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]
